[package]
name = "starknet-id"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
num-traits = "0.2.14"
starknet = "0.6.0"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
url = "2.4.1"
