[package]
name = "starknet-id"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
lazy_static = "1.4.0"
num-traits = "0.2.14"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
url = "2.4.1"
